objects/Cosmetovigilance_Callout_Log__c.object
<CustomObject>
    <label>Cosmetovigilance Callout Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Cosmeto Callout Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cosmetovigilance Callout Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <label>Headers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quiddity__c</fullName>
        <label>Quiddity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Id__c</fullName>
        <label>Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unreceived__c</fullName>
        <formula>Status_Code__c != 200</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unreceived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cosmetovigilance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cosmetovigilance</label>
        <referenceTo>Cosmetovigilance_Form__c</referenceTo>
        <relationshipLabel>Cosmetovigilance Callout Logs</relationshipLabel>
        <relationshipName>Cosmetovigilance_Callout_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Query_Parameters__c</fullName>
        <label>Query Parameters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Limits_Usage__c</fullName>
        <label>Salesforce Limits Usage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Error_Encountered__c</fullName>
        <formula>!ISBLANK(Stack_Trace__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Error Encountered</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>